--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,9 +8,17 @@
         <servlet-name>resumeServlet</servlet-name>
         <servlet-class>ru.javawebinar.basejava.web.ResumeServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>testServlet</servlet-name>
+        <servlet-class>ru.javawebinar.basejava.web.TestServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>resumeServlet</servlet-name>
         <url-pattern>/resume</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>testServlet</servlet-name>
+        <url-pattern>/test</url-pattern>
     </servlet-mapping>
 
 </web-app>
